--- a/_posts/2016-08-16-book.markdown
+++ b/_posts/2016-08-16-book.markdown
@@ -7,7 +7,7 @@ categories: book review, reading
 The Woman In Black, by Susan Hill
 
 Should you read it?: Yes.
-[I'm not one for rating books. I view them as would I recommend it to a friend or not.]
+[I'm not one for rating books. I view them as 'would I recommend it to a friend or not'.]
 
 I'd been meaning to read this book for ages. I'd seen it recommended on many lists of good scary books, and I finally got around to it! This was a super enjoyable read.
 
